<resources>
    <string name="app_name">Vending Machine</string>
    <string name="action_settings">Settings</string>
    <string name="wallet_label">Wallet £</string>
    <string name="wallet_amount">10</string>
    <string name="restock">Restock</string>
    <string name="purchase">Purchase</string>
    <string name="snickers_stock">5</string>
    <string name="title_activity_products">ProductsActivity</string>
    <string name="products_title">Products</string>

    <string name="water">Water (£1.00)</string>
    <string name="coke">Coke (£1.50)</string>
    <string name="crisps">Crisps (£1.75)</string>
    <string name="snickers">Snickers (£1.65)</string>
    <string name="water_price">1</string>
    <string name="coke_price">1.5</string>
    <string name="crisps_price">1.75</string>
    <string name="snickers_price">1.65</string>
    <string name="select_product">Select Product</string>
    <string name="is_in_service">Is in Service</string>
    <string name="veggie_option">Veggie</string>
    <string name="has_sweetener">Has sweetener</string>
    <string name="has_nuts">Has nuts</string>
    <string name="description">Description</string>

    <string name="crisps_description">Yummy yummy crisps!</string>
    <string name="coke_description">Just as you like it</string>
    <string name="snickers_description">So sweet!</string>
    <string name="water_description">Boring still water</string>

</resources>
