<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/products_title"
        android:textSize="32sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/water_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/water" />

    <Button
        android:id="@+id/coke_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/coke" />

    <Button
        android:id="@+id/crisps_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/crisps" />

    <Button
        android:id="@+id/snickers_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/snickers" />

</LinearLayout>
