<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.escbooks.vendingmachine.VendingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:id="@+id/vending_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="6dp"
            android:text="@string/app_name"
            android:textSize="32sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_margin="4dp"
            android:src="@drawable/vending_machine" />

        <Switch
            android:id="@+id/is_in_service_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:switchPadding="8dp"
            android:text="@string/is_in_service" />

        <Button
            android:id="@+id/select_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_product" />

        <!-- Wallet Section -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_label"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/wallet_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wallet_amount"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Stock / Purchase panel -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:background="#EEB910"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:padding="4dp">

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/snickers"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/stock_amount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/snickers_stock"
                android:textSize="16sp" />

            <Button
                android:id="@+id/restock_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/restock" />

            <Button
                android:id="@+id/purchase_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/purchase" />

        </LinearLayout>

        <EditText
            android:id="@+id/description_view"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:hint="@string/description"
            android:imeOptions="actionSearch"
            android:singleLine="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/nuts_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_nuts" />

            <CheckBox
                android:id="@+id/veggie_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/veggie_option" />

            <CheckBox
                android:id="@+id/sweetener_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_sweetener" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>
